# cmake

./: README.md
3rd/hello/src/: hello.cpp
example1/: README.md
example1/3rd/hello/: CMakeLists.txt
example1/3rd/hello/include/: hello.h
example2/: CMakeLists.txt  README.md  run.sh
example2/src/: hello.cpp
example2/test/: test.cpp
example3/: CMakeLists.txt
example4/: CMakeLists.txt  test.py
example4/test/: test.cpp
test_hello/: CMakeLists.txt  README.md  readme.md
